# cpp_error_warning_test_set

./: CMakeLists.txt  LICENSE  README.md
error/: AssignmentAddressToInteger.c  CMakeLists.txt  compiler_lib  mismatchsize.cpp  syntaxError.c
good/: CMakeLists.txt  compiler_exe  memleakGood.c
unsafe/exe/: CMakeLists.txt  memleak.c  outOfBounds.c
unsafe/lib/: CMakeLists.txt  arrayindexthencheck.cpp  assignmentinassert.cpp  boolfuncreturn.cpp  bufferaccessoutofbounds.cpp  clarifycondition.cpp  comparisonofboolwithbool.cpp  comparisonofboolwithint.cpp  comparisonwithbool.cpp  duplicatebranch.cpp  duplicateexpression.cpp  funcreturn.cpp  incorrectlogicoperator.cpp  invaliddereferenceiterator.cpp  invaliditerator.cpp  invalidvarargs.cpp  memleakonrealloc.cpp  memsetzerobytes.cpp  mismatchallocdealloc.cpp  nestedloop.cpp  possibleuninitstruct.cpp  stlfinderror.cpp  stlmissingcomparison.cpp  stloutofbounds.cpp  stlsortcheck.cpp  switchnobreakup.cpp  switchnodefault.cpp  uninitmemberinctor.cpp  unsafeclasscanleak.cpp  unsafefunctionusage.cpp  unsignedlessthanzero.cpp
