add_library(arrayIndexOutOfBoundsGood arrayIndexOutOfBoundsGood.c)
add_library(AssignmentAddressToIndegerGood AssignmentAddressToIndegerGood.c)
add_library(auto_Variables auto_variables.c)
add_library(bufferAccessOutOfBoundsGood bufferAccessOutOfBoundsGood.c)
add_library(eraseGood eraseGood.cpp)
add_library(memleakGood memleakGood.c)
add_library(outOfBoundsGood outOfBoundsGood.c)
add_library(resourceLeakGood resourceLeakGood.c)
add_library(syntaxErrorGood syntaxErrorGood.c)